--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
 #top-nav {
   background-color: white;
 }
+.container-topnav {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
 #header {
   background-color: red;
   width: 100%;
@@ -34,4 +40,9 @@ h1 {
 a {
   text-decoration: none;
   color: inherit;
+}
+.thumbnails{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
