--- a/style.css
+++ b/style.css
@@ -5,15 +5,19 @@ Author URI: https://cv.pierreboufflers.narramus.fr
 Description: Thème créé en juillet 2018 pour le site de Cathy Apourceau-Poly, sénatrice du Pas-de-Calais, membre du CRCE.
 Version: 1.0
 */
-
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: black;
+  background-color: #aaa69d;
+}
+a {
+  text-decoration: none;
+  color: inherit;
 }
 #top-nav {
   background-color: white;
+  flex-wrap: nowrap;
 }
 .container-topnav {
   max-width: 100%;
@@ -21,25 +25,33 @@ body {
   padding: 0;
   text-align: center;
 }
-#header {
-  background-color: red;
-  width: 100%;
+#page {
+  background-image: url('img/liquidateurs.jpg');
+  background-repeat: no-repeat;
+  background-size: 100vw;
+}
+.logohda {
+  padding: 3em 0 10em 0;
+}
+h1 {
+  text-align: center;
+  padding-bottom: 5em;
+  font: "Open San", sans-serif;
+  color: white;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  font-size: 3em;
+  font-weight: bold;
+}
+.description{
+    text-align: center;
 }
 #content {
   width: 80%;
   background-color: white;
   margin: auto;
   padding: 2em;
-}
-h1 {
-  text-align: center;
-}
-.description{
-    text-align: center;
-}
-a {
-  text-decoration: none;
-  color: inherit;
+  position: -100vh;
 }
 .thumbnails{
   display: flex;
