--- a/style.css
+++ b/style.css
@@ -15,20 +15,37 @@ a {
   text-decoration: none;
   color: inherit;
 }
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
 #top-nav {
   background-color: white;
-  flex-wrap: nowrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.container-topnav {
-  max-width: 100%;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+.link-crce {
+  background-color: #ed1d32;
+  color: white;
+  text-transform: uppercase;
+  padding: 0.2em 1em;
+}
+.contact-us {
+  background-color: #ed1d32;
+  color: white;
+  text-transform: uppercase;
+  padding: 0.2em 1em;
+}
+.logo-reseaux-sociaux {
+  height: 2em;
+}
+.logo-contact-us {
+  height: 1.5em;
 }
 #page {
   background-image: url('img/liquidateurs.jpg');
   background-repeat: no-repeat;
-  background-size: 100vw;
 }
 .logohda {
   padding: 3em 0 10em 0;
@@ -44,7 +61,7 @@ h1 {
   font-weight: bold;
 }
 .description{
-    text-align: center;
+  text-align: center;
 }
 #content {
   width: 80%;
