--- a/style.css
+++ b/style.css
@@ -19,11 +19,58 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
-#top-nav {
+
+/* Header.php */
+#stickyheader {
   background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.hamburger{
+  position: absolute;
+  cursor: pointer;
+  outline: none;
+  z-index: 2;
+  padding-left: 1em;
+}
+.cross {
+  position: absolute;
+  cursor: pointer;
+  outline: none;
+  z-index: 2;
+  padding-top: 0.5em;
+  padding-left: 0.5em;
+  font-size: 2.5em;
+}
+.menu-menu-hamburger-container {
+  z-index: 1;
+  font-size: 1em;
+  width: 10em;
+  background: white;
+  position: absolute;
+  font-size: 1em;
+}
+.menu-menu-hamburger-container ul {
+  margin: 0;
+  padding: 0;
+  padding-top: 1em;
+  list-style-type: none;
+  list-style-image: none;
+}
+.menu-menu-hamburger-container li {
+  display: block;
+  padding: 0.5em 0.5em 0.5em 1em;
+  border-bottom: #dddddd 1px solid;
+}
+.menu-menu-hamburger-container ul li a {
+  text-decoration: none;
+  margin: 0px;
+  color: inherit;
+}
+.menu-menu-hamburger-container a {
+  text-decoration: none;
+  color: #inherit;
 }
 .link-crce {
   background-color: #ed1d32;
@@ -90,7 +137,7 @@ h1 {
 .mosaic_thumbnails {
   position: relative;
   display: block;
-  padding: 0 !important;
+  padding: 0.5em !important;
 }
 .mosaic_thumbnails .mosaic_title_article {
   opacity: 0;
@@ -198,4 +245,10 @@ h1 {
   padding: 2em;
   text-align: justify;
   text-indent: 2em;
+}
+.col_meme_sujet {
+
+}
+.row_meme_sujet {
+
 }
