--- a/style.css
+++ b/style.css
@@ -103,6 +103,30 @@ a:hover {
   background-repeat: no-repeat;
   background-position: 3% -13%;
 }*/
+#carousel-slider {
+  height: 110vh;
+  z-index: -99;
+}
+.slide-one {
+  background-image: url('img/2018-0592-028-CL.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index: -99;
+}
+.slide-two {
+  background-image: url('img/cathy-lycee.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  z-index: -99;
+}
+.slide-three {
+  background-image: url('img/cathy_dominique.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+}
 /*.carousel {
   z-index: -99;
 }
@@ -133,7 +157,7 @@ a:hover {
   left: 0;
   opacity: 0;
   z-index: 2;
-}*/
+}/*
 .carousel-fade .carousel-inner .item {
     opacity: 0;
     transition-property: opacity;
@@ -204,7 +228,7 @@ a:hover {
     position: fixed;
     width: 100%;
     height: 100%;
-}
+}*/
 .lieu {
   border: double black;
   text-align: center;
