--- a/style.css
+++ b/style.css
@@ -97,29 +97,25 @@ a:hover {
 .logo-contact-us {
   height: 1.5em;
 }
-/*#page {
-  background-image: url('img/2018-0592-028-CL-redim.jpg');
-  background-size: 110%;
-  background-repeat: no-repeat;
-  background-position: 3% -13%;
-}*/
+.slider-container-absolute {
+  position: absolute;
+  z-index: 2;
+}
 #carousel-slider {
   height: 110vh;
-  z-index: -99;
+  z-index: 1;
 }
 .slide-one {
   background-image: url('img/2018-0592-028-CL.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  z-index: -99;
 }
 .slide-two {
   background-image: url('img/cathy-lycee.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
-  z-index: -99;
 }
 .slide-three {
   background-image: url('img/cathy_dominique.jpg');
@@ -127,108 +123,10 @@ a:hover {
   background-size: cover;
   background-position: bottom;
 }
-/*.carousel {
-  z-index: -99;
+.info-bannière {
+  position: relative;
+  z-index: 3;
 }
-.carousel .item {
-  height: 800px;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  -o-transition: opacity 1s;
-  transition: opacity 1s;
-}
-.carousel .one {
-  background: url('img/2018-0592-028-CL-redim.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.carousel .two {
-  background: url('img/2018-0592-007-CL.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.carousel .three {
-  background: url('img/2018-0592-023-CL.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-.carousel .active.left {
-  left: 0;
-  opacity: 0;
-  z-index: 2;
-}/*
-.carousel-fade .carousel-inner .item {
-    opacity: 0;
-    transition-property: opacity;
-}
-.carousel-fade .carousel-inner .active {
-    opacity: 1;
-}
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-    left: 0;
-    opacity: 0;
-    z-index: 1;
-}
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-    opacity: 1;
-}
-.carousel-fade .carousel-control {
-    z-index: 2;
-}
-@media all and (transform-3d),
-(-webkit-transform-3d) {
-    .carousel-fade .carousel-inner > .item.next,
-    .carousel-fade .carousel-inner > .item.active.right {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    .carousel-fade .carousel-inner > .item.prev,
-    .carousel-fade .carousel-inner > .item.active.left {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    .carousel-fade .carousel-inner > .item.next.left,
-    .carousel-fade .carousel-inner > .item.prev.right,
-    .carousel-fade .carousel-inner > .item.active {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-}
-.item:nth-child(1) {
-    background: url('img/2018-0592-028-CL-redim.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-.item:nth-child(2) {
-    background: url('img/2018-0592-007-CL.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-.item:nth-child(3) {
-    background: url('img/2018-0592-023-CL.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-.carousel {
-    z-index: -99;
-}
-.carousel .item {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-}*/
 .lieu {
   border: double black;
   text-align: center;
@@ -369,6 +267,9 @@ h1 {
   margin: 1em 0;
 }
 /* category.php */
+.postcard-container {
+  border-bottom: solid 1px black;
+}
 .postcard_category {
   padding: 1em;
 }
@@ -379,6 +280,34 @@ h1 {
 }
 .category_content_article p {
   text-align: justify;
+}
+.cloud-tag-container {
+
+}
+.cloud-tag-title {
+  background-color: #20bf6b; /* #6ab04c */
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0.2em 1em;
+  font-size: 1.3em;
+  font-weight: bold;
+  margin: 2em 0.5em 1em 0.5em;
+}
+.cloud-tag-category {
+  padding: 0.5em 10em;
+  text-align: center;
+}
+/* tag.php */
+.title-tag {
+  background-color: #20bf6b; /* #6ab04c */
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0.2em 1em;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 1em 0.5em;
 }
 /* Single.php */
 .post_category_article {
@@ -436,4 +365,8 @@ h1 {
   font-weight: bold;
   padding: 0 1em;
   padding-top: 0.05em;
+}
+.cloud-tag-post {
+  padding: 0.5em 3em;
+  text-align: justify;
 }
