--- a/style.css
+++ b/style.css
@@ -5,6 +5,38 @@ Author URI: https://cv.pierreboufflers.narramus.fr
 Description: Thème créé en juillet 2018 pour le site de Cathy Apourceau-Poly, sénatrice du Pas-de-Calais, membre du CRCE.
 Version: 1.0
 */
+@font-face {
+  font-family: "Lato-Regular";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/Lato/Lato-Regular.ttf");
+}
+@font-face {
+  font-family: "Lato-Italic";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/Lato/Lato-Italic.ttf");
+}
+@font-face {
+  font-family: "Lato-Bold";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/Lato/Lato-Bold.ttf");
+}
+@font-face {
+  font-family: "Lato-BoldItalic";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/Lato/Lato-BoldItalic.ttf");
+}
+@font-face {
+  font-family: "CrimsonText-Regular";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/CrimsonText/CrimsonText-Regular.ttf");
+}
+@font-face {
+  font-family: "CrimsonText-Italic";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/CrimsonText/CrimsonText-Italic.ttf");
+}
+@font-face {
+  font-family: "CrimsonText-Bold";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/CrimsonText/CrimsonText-Bold.ttf");
+}
+@font-face {
+  font-family: "CrimsonText-BoldItalic";
+  src: url("/CAP/wp-content/themes/blogCathy/fonts/CrimsonText/CrimsonText-BoldItalic.ttf");
+}
 body {
   margin: 0;
   padding: 0;
@@ -19,7 +51,6 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
-
 /* Header.php */
 #stickyheader {
   background-color: white;
@@ -40,6 +71,7 @@ a:hover {
   outline: none;
   z-index: 2;
   padding-left: 1em;
+  font-family: "Lato", sans-serif;
 }
 .cross {
   position: absolute;
@@ -57,6 +89,7 @@ a:hover {
   background: white;
   position: absolute;
   font-size: 1em;
+  font-family: "Lato", sans-serif;
 }
 .menu-menu-hamburger-container ul {
   margin: 0;
@@ -79,17 +112,22 @@ a:hover {
   text-decoration: none;
   color: #inherit;
 }
+#searchform {
+  font-family: "Lato", sans-serif;
+}
 .link-crce {
   background-color: #ed1d32;
   color: white;
   text-transform: uppercase;
-  padding: 0.2em 1em;
+  padding: 0.3em 1em;
+  font-family: "Lato", sans-serif;
 }
 .contact-us {
   background-color: #ed1d32;
   color: white;
   text-transform: uppercase;
-  padding: 0.2em 1em;
+  padding: 0.3em 1em;
+  font-family: "Lato", sans-serif;
 }
 .logo-reseaux-sociaux {
   height: 2em;
@@ -97,35 +135,11 @@ a:hover {
 .logo-contact-us {
   height: 1.5em;
 }
-.slider-container-absolute {
-  position: absolute;
-  z-index: 2;
-}
-#carousel-slider {
-  height: 110vh;
-  z-index: 1;
-}
-.slide-one {
-  background-image: url('img/2018-0592-028-CL.jpg');
-  background-size: cover;
+#page {
+  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy_dominique.jpg');
   background-repeat: no-repeat;
-  background-position: bottom;
-}
-.slide-two {
-  background-image: url('img/cathy-lycee.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
-}
-.slide-three {
-  background-image: url('img/cathy_dominique.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
-}
-.info-bannière {
-  position: relative;
-  z-index: 3;
+  background-size: contain;
+  background-position: 0 -10%;
 }
 .lieu {
   border: double black;
@@ -137,6 +151,36 @@ a:hover {
   letter-spacing: 2px;
   font-weight: bold;
 }
+/*.slider-container-absolute {
+position: absolute;
+z-index: 2;
+}
+#carousel-slider {
+height: 110vh;
+z-index: 1;
+}
+.slide-one {
+background-image: url('img/2018-0592-028-CL.jpg');
+background-size: cover;
+background-repeat: no-repeat;
+background-position: bottom;
+}
+.slide-two {
+background-image: url('img/cathy-lycee.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: bottom;
+}
+.slide-three {
+background-image: url('img/cathy_dominique.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: bottom;
+}
+.info-bannière {
+position: relative;
+z-index: 3;
+}*/
 .logohda {
   margin-top: 8em;
 }
@@ -149,6 +193,7 @@ h1 {
   text-transform: uppercase;
   font-size: 3em;
   font-weight: bold;
+  font-family: "Lato-Bold", sans-serif;
 }
 #content {
   width: 80%;
@@ -165,6 +210,7 @@ h1 {
   text-align: center;
   margin: 1em 0 2em 0;
   text-shadow: 1px 1px 8px black;
+  font-family: "Lato-Regular", sans-serif;
 }
 .mosaic_thumbnails {
   position: relative;
@@ -194,6 +240,7 @@ h1 {
   padding: 0.1em 0.8em;
   font-size: 1.3em;
   font-weight: bold;
+  font-family: "Lato-Bold", sans-serif;
 }
 .mosaic_category_article {
   background-color: #666699;
@@ -203,6 +250,7 @@ h1 {
   padding: 0.05em 0.8em;
   font-size: 1.3em;
   font-weight: bold;
+  font-family: "Lato-Bold", sans-serif;
 }
 .mosaic_excerpt {
   position: absolute;
@@ -214,6 +262,7 @@ h1 {
   width: 80%;
   transition: all 0.3s ease-in;
   padding: 0 1em;
+  font-family: "CrimsonText-Regular", serif;
 }
 .mosaic_excerpt {
   opacity: 0;
@@ -232,6 +281,7 @@ h1 {
   margin: 1em 0 2em 0;
   padding: 0 1em;
   text-shadow: 1px 1px 8px black;
+  font-family: "Lato-Regular", sans-serif;
 }
 .thumbnails{
   display: flex;
@@ -250,20 +300,37 @@ h1 {
   box-shadow: 1em 1em #6ab04c;
   margin: 1em;
   padding: 1em;
+  font-family: "CrimsonText-Regular", serif;
+  font-size: 1.1em;
+  line-height: 1.6em;
 }
 .title-footer {
-  text-transform: none;
+  font-family: "Lato-Regular", sans-serif;
+  line-height: 1.5em;
 }
 .chevron-footer {
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: #ed1d32;
 }
 .row-contact-footer {
   margin: 1em 0;
 }
+.container_logo_footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .logo_footer {
   height: 2em;
+}
+.exposant {
+  position: relative;
+  bottom: 1px;
+  font-size: .8em;
+  line-height: .8em;
+  vertical-align:super;
+  text-decoration:none;
 }
 /* category.php */
 .title_category {
@@ -273,6 +340,7 @@ h1 {
   padding: 0.1em 0.8em;
   font-size: 2.3em;
   font-weight: bold;
+  font-family: "Lato-Bold", sans-serif;
 }
 .postcard-container {
   border-bottom: solid 1px black;
@@ -280,16 +348,28 @@ h1 {
 .postcard_category {
   padding: 1em;
 }
+.category_thumbnail_container {
+  display: flex;
+  justify-content: center;
+}
+.category_size_thumbnail {
+  display: block;
+  height: 11em !important;
+}
 .category_title_article {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 1.5em;
+  font-family: "Lato-Bold", sans-serif;
+  text-align: right;
+  margin: 0;
+  padding: 0;
 }
 .category_content_article p {
   text-align: justify;
-}
-.cloud-tag-container {
-
+  font-family: "CrimsonText-Regular", serif;
+  font-size: 1.1em;
+  line-height: 1.4em;
 }
 .cloud-tag-title {
   background-color: #6ab04c;
@@ -300,6 +380,7 @@ h1 {
   font-size: 1.3em;
   font-weight: bold;
   margin: 2em 0.5em 1em 0.5em;
+  font-family: "Lato-Bold", sans-serif;
 }
 .cloud-tag-category {
   padding: 0.5em 10em;
@@ -307,7 +388,7 @@ h1 {
 }
 /* tag.php */
 .title-tag {
-  background-color: #6ab04c;
+  background-color: #009432;
   color: white;
   text-transform: uppercase;
   text-align: center;
@@ -315,6 +396,7 @@ h1 {
   font-size: 2em;
   font-weight: bold;
   margin: 1em 0.5em;
+  font-family: "Lato-Bold", sans-serif;
 }
 /* Single.php */
 .post_category_article {
@@ -326,24 +408,29 @@ h1 {
   font-size: 1.5em;
   font-weight: bold;
   margin: 1em 0;
+  font-family: "Lato-Bold", sans-serif;
 }
 .post_title_article {
   font-size: 2.5em;
   font-weight: bold;
   letter-spacing: 3px;
+  font-family: "Lato-Bold", sans-serif;
 }
 .post_date {
   font-size: 1em;
   padding: 0.5em 0;
+  font-family: "CrimsonText-Regular", sans-serif;
 }
 .post_content_article {
   padding: 2em;
   text-align: justify;
   text-indent: 5em;
-  line-height: 2.3em;
+  line-height: 2.5em;
 }
 .post_content_article p {
   margin-bottom: 2em;
+  font-family: "CrimsonText-Regular", serif;
+  font-size: 1.2em;
 }
 .col_meme_sujet {
   border-left: 1px solid black;
@@ -352,9 +439,7 @@ h1 {
   text-transform: uppercase;
   font-style: italic;
   font-size: 1.8em;
-}
-.row_meme_sujet {
-
+  font-family: "Lato-Italic", sans-serif;
 }
 .thumbnail_meme_sujet {
   height: 14em;
@@ -372,6 +457,7 @@ h1 {
   font-weight: bold;
   padding: 0 1em;
   padding-top: 0.05em;
+  font-family: "Lato-Bold", sans-serif;
 }
 .cloud-tag-post {
   padding: 0.5em 3em;
