--- a/style.css
+++ b/style.css
@@ -51,7 +51,10 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
-/* Header.php */
+.blind {
+  z-index: -1000;
+}
+/* header */
 #stickyheader {
   background-color: white;
   display: flex;
@@ -135,26 +138,26 @@ a:hover {
 .logo-contact-us {
   height: 1.5em;
 }
-#page {
-  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-senat-redim.jpg');
+.background_default {
+  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-andré.jpg');
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: 0 -5em;
 }
 .background_senat {
   background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-senat-redim.jpg');
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: 0 -13em;
 }
 .background_circo {
-  background-image: url('/CAP/wp-content/themes/blogCathy/img/cath-souspref.jpg');
+  background-image: url('/CAP/wp-content/themes/blogCathy/img/cathy-souspref.jpg');
   background-repeat: no-repeat;
   background-size: contain;
-}
-.info-bannière {
-  margin-top: 5em;
+  background-position: 0 -5em;
 }
 .logo-bannière {
-  margin-top: 13em;
+  margin-top: 15em;
 }
 .link-category-bannière {
   display: flex;
@@ -162,17 +165,15 @@ a:hover {
   align-items: center;
 }
 #senat:hover {
-  color: #CAD3C8;
-  text-decoration: underline dashed;
-  letter-spacing: 3px;
+  color: #6ab04c;
+  font-weight: bold;
 }
 #circo:hover {
-  color: #CAD3C8;
-  text-decoration: underline dashed;
-  letter-spacing: 3px;
+  color: #ed1d32;
+  font-weight: bold;
 }
 .titre-bannière {
-  margin-top: 8em;
+  margin-top: 6em;
 }
 .lieu {
   text-align: center;
@@ -184,36 +185,6 @@ a:hover {
   color : white;
   font-size: 1.2em;
 }
-/*.slider-container-absolute {
-position: absolute;
-z-index: 2;
-}
-#carousel-slider {
-height: 110vh;
-z-index: 1;
-}
-.slide-one {
-background-image: url('img/2018-0592-028-CL.jpg');
-background-size: cover;
-background-repeat: no-repeat;
-background-position: bottom;
-}
-.slide-two {
-background-image: url('img/cathy-lycee.jpg');
-background-repeat: no-repeat;
-background-size: cover;
-background-position: bottom;
-}
-.slide-three {
-background-image: url('img/cathy_dominique.jpg');
-background-repeat: no-repeat;
-background-size: cover;
-background-position: bottom;
-}
-.info-bannière {
-position: relative;
-z-index: 3;
-}*/
 h1 {
   text-align: center;
   margin: 2em 0;
@@ -224,6 +195,7 @@ h1 {
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
 }
+/* page content */
 #content {
   width: 80%;
   background-color: white;
@@ -329,7 +301,32 @@ h1 {
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
 }
-
+.wp-pagenavi {
+  font-family: "Lato-Regular", sans-serif;
+  font-size: 1.1em;
+}
+.previouspostslink {
+  margin: 0 0.5em;
+}
+.previouspostslink:hover {
+  font-style: italic;
+}
+.current {
+  font-weight: bold;
+  margin: 0 0.5em;
+}
+.page {
+  margin: 0 0.5em;
+}
+.page:hover {
+  color: #ed1d32;
+}
+.nextpostslink {
+  margin: 0 0.5em;
+}
+.nextpostslink:hover {
+  text-decoration: underline;
+}
 /* footer */
 #footer {
   margin-top: 5em;
