--- a/css/style_min_width_1200px.css
+++ b/css/style_min_width_1200px.css
@@ -91,7 +91,6 @@ a:hover {
   width: 10em;
   background: white;
   position: absolute;
-  font-size: 1em;
   font-family: "Lato", sans-serif;
 }
 .menu-menu-hamburger-container ul {
@@ -158,6 +157,9 @@ a:hover {
 }
 .logo-bannière {
   margin-top: 15em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .link-category-bannière {
   display: flex;
@@ -184,6 +186,9 @@ a:hover {
   background-color: rgb(0, 0, 0, 0.5);
   border: solid 1px white;
   width: 15em;
+}
+.logo_hda {
+  width: 27em;
 }
 h1 {
   text-align: center;
