--- a/css/style_min_width_720px.css
+++ b/css/style_min_width_720px.css
@@ -174,6 +174,7 @@ a:hover {
   background-color: rgb(0, 0, 0, 0.5);
   border: solid 1px white;
   margin: 1em 0;
+  width: 15em;
 }
 h1 {
   text-align: center;
@@ -302,15 +303,15 @@ h1 {
   max-width: 100vw !important;
   background-color: #d2dae2;
   box-shadow: 0.7em 1em #6ab04c;
-  margin: 0.5em;
-  padding: 0.5em 0;
+  margin: 2em;
+  padding: 2em;
   font-family: "CrimsonText-Regular", serif;
   font-size: 1.1em;
   line-height: 1.6em;
 }
 .title-footer {
   font-family: "Lato-Regular", sans-serif;
-  line-height: 1.3em;
+  line-height: 1.1em;
 }
 .chevron-footer {
   font-weight: bold;
@@ -345,7 +346,7 @@ h1 {
   background-color: #666699;
   text-transform: uppercase;
   padding: 0.1em 0.8em;
-  font-size: 1.7em;
+  font-size: 2em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -366,13 +367,14 @@ h1 {
 .category_title_article {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 1.1em;
+  font-size: 1.2em;
   font-family: "Lato-Bold", sans-serif;
+  text-align: right;
 }
 .category_content_article p {
   text-align: justify;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1em;
+  font-size: 1.1em;
   line-height: 1.4em;
 }
 .cloud-tag-title {
@@ -409,13 +411,13 @@ h1 {
   text-transform: uppercase;
   display: inline;
   padding: 0.2em 1em;
-  font-size: 1.3em;
+  font-size: 1.5em;
   font-weight: bold;
   margin: 1em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .post_title_article {
-  font-size: 1.7em;
+  font-size: 2em;
   font-weight: bold;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -426,31 +428,32 @@ h1 {
 }
 .post_content_article {
   text-align: justify;
-  text-indent: 2em;
-  line-height: 1.5em;
+  text-indent: 4em;
+  line-height: 1.8em;
 }
 .post_content_article p {
   margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.2em;
 }
 .col_meme_sujet {
-  margin-top: 2em;
-  border-top: solid 1px black
+  border-left: solid 1px black;
+  border-top: none;
+  margin: 0;
 }
 .title_col_meme_sujet {
   text-transform: uppercase;
   font-style: italic;
   font-size: 1.5em;
   font-family: "Lato-Italic", sans-serif;
-  margin-top: 1em;
+  margin-top: 0;
 }
 .thumbnail_meme_sujet {
-  height: 14em;
+  height: 12em;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 1em 0;
-  padding: 0 !important;
+  padding: 1em;
 }
 .title_thumbnail_meme_sujet {
   display: block;
@@ -467,12 +470,11 @@ h1 {
   padding: 0.5em 3em;
   text-align: justify;
 }
-
 /* senatrice.php */
 .title_page_senatrice {
   background-color: #833471;
   text-transform: uppercase;
-  font-size: 1.7em;
+  font-size: 2em;
   letter-spacing: 5px;
   color: white;
   text-align: center;
@@ -481,16 +483,19 @@ h1 {
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
 }
+.bio_container_senatrice {
+  margin: 1em 4em 1em 2em;
+}
 .info_senatrice {
-  line-height: 1.5em;
+  line-height: 1.8em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.2em;
   text-align: justify;
 }
 .text_senatrice p {
-  line-height: 1.5em;
+  line-height: 1.8em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.2em;
   text-align: justify;
 }
 .avatar_container_senatrice {
@@ -498,16 +503,21 @@ h1 {
   align-items: center;
   margin: 1em;
 }
+.side_text_senatrice{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* mentions-legales.php */
 .title_mentions {
   text-transform: uppercase;
-  font-size: 1.5em;
+  font-size: 1.7em;
   margin: 1em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .subtitle_mentions {
   text-transform: uppercase;
-  font-size: 1.3em;
+  font-size: 1.5em;
   padding-left: 1em;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -515,7 +525,7 @@ h1 {
   padding: 0em 1em 2em 2em;
   line-height: 2em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.2em;
+  font-size: 1.3em;
   text-align: justify;
 }
 .bold {
@@ -530,19 +540,19 @@ h1 {
 }
 .title_politics {
   text-transform: uppercase;
-  font-size: 1.5em;
+  font-size: 2em;
   margin: 1em 0;
   font-family: "Lato-Bold", sans-serif;
 }
 .text_politics {
   line-height: 1.5em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1.1em;
+  font-size: 1.2em;
   text-align: justify;
 }
 .subtitle_politics {
   text-transform: uppercase;
-  font-size: 1.3em;
+  font-size: 1.5em;
   padding-left: 1em;
   font-family: "Lato-Bold", sans-serif;
 }
@@ -550,11 +560,11 @@ h1 {
   text-decoration: underline;
 }
 .title_text_politics {
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-family: "Lato-Bold", sans-serif;
 }
 .subtitle_text_politics {
-  font-size: 1.1em;
+  font-size: 1.2em;
   font-family: "Lato-Bold", sans-serif;
 }
 .link_politics {
@@ -569,7 +579,7 @@ h1 {
   color: white;
   text-transform: uppercase;
   padding: 0.2em 1em;
-  font-size: 1.7em;
+  font-size: 2em;
   font-weight: bold;
   margin: 0.5em 0;
   font-family: "Lato-Bold", sans-serif;
@@ -578,28 +588,28 @@ h1 {
   padding: 1em;
   text-align: justify;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 .text_message_sent {
   padding: 1em;
   text-align: justify;
   margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 .error {
   padding: 1em;
   text-align: justify;
   margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 .forms {
   padding: 1em;
   text-align: justify;
   margin-bottom: 1em;
   font-family: "CrimsonText-Regular", serif;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 .input_contact {
   margin-bottom: 1em;
