--- a/css/style_min_width_1200px.css
+++ b/css/style_min_width_1200px.css
@@ -287,7 +287,7 @@ h1 {
   color: white;
   letter-spacing: 3px;
   text-align: center;
-  margin: 1em 0 2em 0;
+  margin: 2em 0;
   padding: 0 1em;
   text-shadow: 1px 1px 8px black;
   font-family: "Lato-Regular", sans-serif;
