--- a/css/style_min_width_720px.css
+++ b/css/style_min_width_720px.css
@@ -68,20 +68,34 @@ a:hover {
   width: 100%;
   z-index: 100;
 }
-.hamburger{
-  position: absolute;
-  cursor: pointer;
-  outline: none;
-  z-index: 0;
-  padding-left: 1em;
-  font-family: "Lato", sans-serif;
+@media screen and (orientation: portrait) {
+  .hamburger{
+    position: absolute;
+    cursor: pointer;
+    outline: none;
+    z-index: 2;
+    padding-left: 0.5em;
+    margin: 0;
+    font-family: "Lato", sans-serif;
+  }
+}
+@media screen nd (orientation: landscape) {
+  .hamburger{
+    position: absolute;
+    cursor: pointer;
+    outline: none;
+    z-index: 2;
+    padding-left: 0.5em;
+    margin: 0;
+    font-family: "Lato", sans-serif;
+  }
 }
 .cross {
   position: absolute;
   cursor: pointer;
   outline: none;
   z-index: 2;
-  font-size: 2.5em;
+  font-size: 2em;
   padding-left: 0.3em;
 }
 .menu-menu-hamburger-container {
