--- a/style_min_width_1200px.css
+++ b/style_min_width_1200px.css
@@ -202,7 +202,7 @@ h1 {
 }
 .div_cookies {
   background-color: white;
-  z-index: 100;
+  z-index: 1000;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -373,6 +373,26 @@ h1 {
   padding: 3em 0;
   background-color: #657381;
   color: black;
+}
+.newsletter_container {
+  background-color: white;
+  z-index: 100;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.newsletter_iframe {
+  border: none;
+}
+.form_newsletter {
+  margin: 0;
+  padding: 1em 10em;
+}
+.text_newsletter {
+  text-align: justify;
+  font-family: "CrimsonText-Regular", serif;
+  color: black;
+  font-size: 1.1em;
 }
 .container_footer {
   max-width: 100vw !important;
